# PyWeek-34

./: .gitignore  LICENSE  README.md  pyproject.toml  run_game.py
Project-Aries/: __main__.py
Project-Aries/characters/: crawler.py  enemy.py  protagonist.py  spaceship.py  ufo.py
Project-Aries/foliage/: foliage.py
Project-Aries/resources/Game Maps/: main.json
Project-Aries/resources/Tiled Folder/: Desert modified.tsx  Main.tmx  main_map.tiled-session
PyWeek-34/: __main__.py
PyWeek-34/characters/: clouds.py  enemy.py  protagonist.py  ufo.py
PyWeek-34/clouds/: clouds.py
PyWeek-34/env_objects/: env_objects.py
PyWeek-34/foliage/: foliage.py
PyWeek-34/resources/Game Assets/jetpack character/spriter_file_png_body_parts/: jet_pack_man.scml
PyWeek-34/resources/Game Maps/: main.json
PyWeek-34/resources/Tiled Folder/: Ground.tsx  Main.tmx  experimental.tmx  main_map.tiled-session  terrain_atlas.tsx
